fix error box being wrong color

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -162,7 +162,7 @@ button:hover,
 
 /* Message Boxes */
 .error-box {
-    background: rgba(237, 37, 78, 0.15);
+    background: rgba(0, 65, 206, 0.15);
     color: var(--white-smoke);
     padding: 1rem;
     border-radius: 10px;
